--- a/BUILD.gn
+++ b/BUILD.gn
@@ -9,6 +9,8 @@ import("//build/buildflag_header.gni")
 import("//build/config/compiler/compiler.gni")
 import("//build/config/sanitizers/sanitizers.gni")
 
+use_call_graph = false # --- workaround undefined vars error
+
 # Path to platform configuration files.
 platform_config_root =
     "chromium/config/$ffmpeg_branding/$os_config/$ffmpeg_arch"
@@ -70,6 +72,7 @@ if (has_nasm_deps) {
     # See comments on fix_textrels config.
     if (use_lld && current_cpu == "x86" && !is_win) {
       all_dependent_configs = [ ":fix_textrels" ]
+      all_dependent_configs += [] # --- workaround defined but unused vars error
     }
   }
 }
