--- a/ffmpeg_generated.gni
+++ b/ffmpeg_generated.gni
@@ -702,3 +702,200 @@ if (use_linux_config && current_cpu == "mips64el" && ffmpeg_branding == "ChromeO
   ]
 }
 
+# --- 20190717 WEBRTC_H264 zxcpoiu: include all h264 sources for android based on cpu
+if (is_android) {
+  #if ((is_mac) || (is_win) || (use_linux_config)) {
+  ffmpeg_c_sources += [
+    "libavcodec/autorename_libavcodec_hpeldsp.c",
+    "libavcodec/autorename_libavcodec_videodsp.c",
+    "libavcodec/autorename_libavcodec_vp3dsp.c",
+    "libavcodec/autorename_libavcodec_vp8dsp.c",
+    "libavcodec/h264pred.c",
+    "libavcodec/vp3.c",
+    "libavcodec/vp3_parser.c",
+    "libavcodec/vp56rac.c",
+    "libavcodec/vp8.c",
+    "libavcodec/vp8_parser.c",
+  ]
+
+  #if ((is_mac && ffmpeg_branding == "Chrome") || (is_win && ffmpeg_branding == "Chrome") || (use_linux_config && ffmpeg_branding == "Chrome") || (use_linux_config && ffmpeg_branding == "ChromeOS")) {
+  if (ffmpeg_branding == "Chrome") {
+    ffmpeg_c_sources += [
+      "libavcodec/cabac.c",
+      "libavcodec/h2645_parse.c",
+      "libavcodec/h264_cabac.c",
+      "libavcodec/h264_cavlc.c",
+      "libavcodec/h264_direct.c",
+      "libavcodec/h264_loopfilter.c",
+      "libavcodec/h264_mb.c",
+      "libavcodec/h264_parse.c",
+      "libavcodec/h264_parser.c",
+      "libavcodec/h264_picture.c",
+      "libavcodec/h264_ps.c",
+      "libavcodec/h264_refs.c",
+      "libavcodec/h264_sei.c",
+      "libavcodec/h264_slice.c",
+      "libavcodec/h264chroma.c",
+      "libavcodec/h264data.c",
+      "libavcodec/h264dec.c",
+      "libavcodec/h264dsp.c",
+      "libavcodec/h264idct.c",
+      "libavcodec/h264qpel.c",
+      "libavcodec/startcode.c",
+    ]
+  }
+
+  #if ((is_mac) || (is_win && current_cpu == "x64") || (is_win && current_cpu == "x86") || (use_linux_config && current_cpu == "x64") || (use_linux_config && current_cpu == "x86")) {
+  if ((current_cpu == "x64") || (current_cpu == "x86")) {
+    ffmpeg_c_sources += [
+      "libavcodec/x86/autorename_libavcodec_x86_videodsp_init.c",
+      "libavcodec/x86/h264_intrapred_init.c",
+      "libavcodec/x86/hpeldsp_init.c",
+      "libavcodec/x86/hpeldsp_vp3_init.c",
+      "libavcodec/x86/vp3dsp_init.c",
+      "libavcodec/x86/vp8dsp_init.c",
+    ]
+    ffmpeg_asm_sources += [
+      "libavcodec/x86/autorename_libavcodec_x86_videodsp.asm",
+      "libavcodec/x86/fpel.asm",
+      "libavcodec/x86/h264_intrapred.asm",
+      "libavcodec/x86/h264_intrapred_10bit.asm",
+      "libavcodec/x86/hpeldsp.asm",
+      "libavcodec/x86/hpeldsp_vp3.asm",
+      "libavcodec/x86/vp3dsp.asm",
+      "libavcodec/x86/vp8dsp.asm",
+      "libavcodec/x86/vp8dsp_loopfilter.asm",
+    ]
+  }
+
+  #if ((use_linux_config && current_cpu == "arm" && arm_use_neon) || (use_linux_config && current_cpu == "arm")) {
+  if ((current_cpu == "arm" && arm_use_neon) || (current_cpu == "arm")) {
+    ffmpeg_c_sources += [
+      "libavcodec/arm/h264pred_init_arm.c",
+      "libavcodec/arm/hpeldsp_init_arm.c",
+      "libavcodec/arm/hpeldsp_init_armv6.c",
+      "libavcodec/arm/videodsp_init_arm.c",
+      "libavcodec/arm/videodsp_init_armv5te.c",
+      "libavcodec/arm/vp3dsp_init_arm.c",
+      "libavcodec/arm/vp8dsp_init_arm.c",
+      "libavcodec/arm/vp8dsp_init_armv6.c",
+    ]
+    ffmpeg_gas_sources += [
+      "libavcodec/arm/hpeldsp_arm.S",
+      "libavcodec/arm/hpeldsp_armv6.S",
+      "libavcodec/arm/videodsp_armv5te.S",
+      "libavcodec/arm/vp8_armv6.S",
+      "libavcodec/arm/vp8dsp_armv6.S",
+    ]
+  }
+
+
+  #if ((use_linux_config && current_cpu == "mips64el") || (use_linux_config && current_cpu == "mipsel")) {
+  if ((current_cpu == "mips64el") || (current_cpu == "mipsel")) {
+    ffmpeg_c_sources += [
+      "libavcodec/mips/autorename_libavcodec_mips_videodsp_init.c",
+      "libavcodec/mips/h264pred_init_mips.c",
+      "libavcodec/mips/hpeldsp_init_mips.c",
+      "libavcodec/mips/vp3dsp_init_mips.c",
+      "libavcodec/mips/vp8dsp_init_mips.c",
+    ]
+  }
+
+  #if ((is_win && current_cpu == "arm64") || (use_linux_config && current_cpu == "arm64")) {
+  if ((current_cpu == "arm64") || (current_cpu == "arm64")) {
+    ffmpeg_c_sources += [
+      "libavcodec/aarch64/h264pred_init.c",
+      "libavcodec/aarch64/hpeldsp_init_aarch64.c",
+      "libavcodec/aarch64/videodsp_init.c",
+      "libavcodec/aarch64/vp8dsp_init_aarch64.c",
+    ]
+    ffmpeg_gas_sources += [
+      "libavcodec/aarch64/autorename_libavcodec_aarch64_h264pred_neon.S",
+      "libavcodec/aarch64/autorename_libavcodec_aarch64_hpeldsp_neon.S",
+      "libavcodec/aarch64/autorename_libavcodec_aarch64_vp8dsp_neon.S",
+      "libavcodec/aarch64/videodsp.S",
+    ]
+  }
+
+  #if ((use_linux_config && current_cpu == "arm" && arm_use_neon && ffmpeg_branding == "Chrome") || (use_linux_config && current_cpu == "arm" && arm_use_neon && ffmpeg_branding == "ChromeOS") || (use_linux_config && current_cpu == "arm" && ffmpeg_branding == "Chrome") || (use_linux_config && current_cpu == "arm" && ffmpeg_branding == "ChromeOS")) {
+  if ((current_cpu == "arm" && arm_use_neon && ffmpeg_branding == "Chrome") || (current_cpu == "arm" && ffmpeg_branding == "Chrome")) {
+    ffmpeg_c_sources += [
+      "libavcodec/arm/h264chroma_init_arm.c",
+      "libavcodec/arm/h264dsp_init_arm.c",
+      "libavcodec/arm/h264qpel_init_arm.c",
+    ]
+    ffmpeg_gas_sources += [
+      "libavcodec/arm/startcode_armv6.S",
+    ]
+  }
+
+  #if ((is_mac && ffmpeg_branding == "Chrome") || (is_win && current_cpu == "x64" && ffmpeg_branding == "Chrome") || (is_win && current_cpu == "x86" && ffmpeg_branding == "Chrome") || (use_linux_config && current_cpu == "x64" && ffmpeg_branding == "Chrome") || (use_linux_config && current_cpu == "x64" && ffmpeg_branding == "ChromeOS") || (use_linux_config && current_cpu == "x86" && ffmpeg_branding == "Chrome") || (use_linux_config && current_cpu == "x86" && ffmpeg_branding == "ChromeOS")) {
+  if ((current_cpu == "x64" && ffmpeg_branding == "Chrome") || (current_cpu == "x86" && ffmpeg_branding == "Chrome")) {
+    ffmpeg_c_sources += [
+      "libavcodec/x86/h264_qpel.c",
+      "libavcodec/x86/h264chroma_init.c",
+      "libavcodec/x86/h264dsp_init.c",
+    ]
+    ffmpeg_asm_sources += [
+      "libavcodec/x86/h264_chromamc.asm",
+      "libavcodec/x86/h264_chromamc_10bit.asm",
+      "libavcodec/x86/h264_deblock.asm",
+      "libavcodec/x86/h264_deblock_10bit.asm",
+      "libavcodec/x86/h264_idct.asm",
+      "libavcodec/x86/h264_idct_10bit.asm",
+      "libavcodec/x86/h264_qpel_10bit.asm",
+      "libavcodec/x86/h264_qpel_8bit.asm",
+      "libavcodec/x86/h264_weight.asm",
+      "libavcodec/x86/h264_weight_10bit.asm",
+      "libavcodec/x86/qpel.asm",
+    ]
+  }
+
+  #if ((use_linux_config && current_cpu == "mips64el" && ffmpeg_branding == "Chrome") || (use_linux_config && current_cpu == "mips64el" && ffmpeg_branding == "ChromeOS") || (use_linux_config && current_cpu == "mipsel" && ffmpeg_branding == "Chrome") || (use_linux_config && current_cpu == "mipsel" && ffmpeg_branding == "ChromeOS")) {
+  if ((current_cpu == "mips64el" && ffmpeg_branding == "Chrome") || (current_cpu == "mipsel" && ffmpeg_branding == "Chrome")) {
+    ffmpeg_c_sources += [
+      "libavcodec/mips/h264chroma_init_mips.c",
+      "libavcodec/mips/h264dsp_init_mips.c",
+      "libavcodec/mips/h264qpel_init_mips.c",
+    ]
+  }
+
+  #if ((is_win && current_cpu == "arm64" && ffmpeg_branding == "Chrome") || (use_linux_config && current_cpu == "arm64" && ffmpeg_branding == "Chrome") || (use_linux_config && current_cpu == "arm64" && ffmpeg_branding == "ChromeOS")) {
+  if ((current_cpu == "arm64" && ffmpeg_branding == "Chrome")) {
+    ffmpeg_c_sources += [
+      "libavcodec/aarch64/h264chroma_init_aarch64.c",
+      "libavcodec/aarch64/h264dsp_init_aarch64.c",
+      "libavcodec/aarch64/h264qpel_init_aarch64.c",
+    ]
+    ffmpeg_gas_sources += [
+      "libavcodec/aarch64/autorename_libavcodec_aarch64_h264cmc_neon.S",
+      "libavcodec/aarch64/autorename_libavcodec_aarch64_h264dsp_neon.S",
+      "libavcodec/aarch64/autorename_libavcodec_aarch64_h264idct_neon.S",
+      "libavcodec/aarch64/autorename_libavcodec_aarch64_h264qpel_neon.S",
+    ]
+  }
+
+  #if (use_linux_config && current_cpu == "arm" && arm_use_neon) {
+  if (current_cpu == "arm" && arm_use_neon) {
+    ffmpeg_c_sources += [
+      "libavcodec/arm/hpeldsp_init_neon.c",
+      "libavcodec/arm/vp8dsp_init_neon.c",
+    ]
+    ffmpeg_gas_sources += [
+      "libavcodec/arm/h264pred_neon.S",
+      "libavcodec/arm/hpeldsp_neon.S",
+      "libavcodec/arm/vp3dsp_neon.S",
+      "libavcodec/arm/vp8dsp_neon.S",
+    ]
+  }
+
+  #if ((use_linux_config && current_cpu == "arm" && arm_use_neon && ffmpeg_branding == "Chrome") || (use_linux_config && current_cpu == "arm" && arm_use_neon && ffmpeg_branding == "ChromeOS")) {
+  if (current_cpu == "arm" && arm_use_neon && ffmpeg_branding == "Chrome") {
+    ffmpeg_gas_sources += [
+      "libavcodec/arm/h264cmc_neon.S",
+      "libavcodec/arm/h264dsp_neon.S",
+      "libavcodec/arm/h264idct_neon.S",
+      "libavcodec/arm/h264qpel_neon.S",
+    ]
+  }
+}
